fix: 파일 순서대로 재고가 출력되도록 수정